force-app/main/default/objects/Chainable_Job__c/Chainable_Job__c.object-meta.xml
<CustomObject>
    <description>Jobs queued up by the Chainable class</description>
    <label>Chainable Job</label>
    <nameField>
        <label>Chainable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chainable Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>