force-app/main/default/objects/Chainable_Job__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>This job has executed all links without errors</description>
    <formula>Completed_Links__c ==  Links__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This job has executed all links without errors</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>