force-app/main/default/objects/Chainable_Job__c/fields/Completed_Links__c.field-meta.xml
<CustomField>
    <fullName>Completed_Links__c</fullName>
    <description>The number of links which have succesfully run</description>
    <inlineHelpText>The number of links which have succesfully run</inlineHelpText>
    <label>Links</label>
    <summaryForeignKey>Chainable_Link__c.Chainable_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>