force-app/main/default/objects/Chainable_Job__c/fields/Failed_Links__c.field-meta.xml
<CustomField>
    <fullName>Failed_Links__c</fullName>
    <description>The number of links which have failed</description>
    <formula>Processed_Links__c - Completed_Links__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of links which have failed</inlineHelpText>
    <label>Failed Links</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>