force-app/main/default/objects/Chainable_Job__c/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <description>The number of links in this job</description>
    <inlineHelpText>The number of links in this job</inlineHelpText>
    <label>Links</label>
    <summaryForeignKey>Chainable_Link__c.Chainable_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>