force-app/main/default/objects/Chainable_Job__c/fields/Processed_Links__c.field-meta.xml
<CustomField>
    <fullName>Processed_Links__c</fullName>
    <description>The number of links which have run</description>
    <inlineHelpText>The number of links which have run</inlineHelpText>
    <label>Processed Links</label>
    <summaryFilterItems>
        <field>Chainable_Link__c.Processed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Chainable_Link__c.Chainable_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>